2013-03-08  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/lst.c, libgputils/gpopcode.c,
    libgputils/gpopcode.h, libgputils/gpcoff.h, libgputils/gpdis.c.
    libgputils/gpcofflink.c, libgputils/gpprocessor.c,
    libgputils/gpprocessor.h,
    gpasm/testsuite/gpasm.project/asmfiles/op12e_12f529.asm,
    gpasm/testsuite/gpasm.project/asmfiles/op12e_16f570.asm,
    gpasm/testsuite/gpasm.project/hexfiles/op12e_16f570.hex,
    gpasm/testsuite/gpasm.project/hexfiles/op12e_12f529.hex,
    gpasm/testsuite/gpasm.project/objasm/op12e_16f570.asm,
    gpasm/testsuite/gpasm.project/objasm/op12e_12f529.asm,
    gpasm/testsuite/gpasm.project/objlstfiles/op12e_12f529.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/op12e_16f570.lst,
    gpasm/testsuite/gpasm.project/objfiles/op12.o,
    gpasm/testsuite/gpasm.project/objfiles/op12e_16f570.o,
    gpasm/testsuite/gpasm.project/objfiles/op12e_12f529.o,
    gpasm/testsuite/gpasm.project/listfiles/op12e_12f529.lst,
    gpasm/testsuite/gpasm.project/listfiles/op12e_16f570.lst,
    gpasm/testsuite/gpasm.mchip/objfiles/reloc2.o:
    fixed support for 12 bit extended instruction set, devices
    PIC12F529T48A, PIC12F529T39A, 16F527 and PIC16F570

2013-03-07  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpprocessor.c: bugfix

2013-03-05  Borut Razem  <borutr@users.sourceforge.net>
  * gputils/gpasm/evaluate.c, gputils/gpasm/directive.c,
    gputils/gpasm/processor.c, gputils/gpasm/gperror.c,
    gputils/gpasm/gperror.h: fix for 16 bit extended instruction set,
    Byte-Oriented and Bit-Oriented Instructions in Indexed Literal
    Offset Mode
  * gputils/gpasm/testsuite/gpasm.old/test0.asm,
    gputils/gpasm/testsuite/gpasm.old/x.asm: dont use halt as a label
    since it is a preudo operatin code

2013-03-04  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpprocessor.c: Changed some class to PROC_CLASS_PIC12E,
    new member in the struct px pics[]: is_16bit_extended
